# GKiM-Projekt

./: .gitignore  README.md  main.c  main.cpp  makefile
BMP to File/src/: CMakeLists.txt
BMP to File/src/ArithmeticCoder/: ArithmeticCoder.cpp  ArithmeticCoder.hpp
BMP to File/src/Class1/: class1.cpp  class1.hpp
BMP to File/src/ImageWrapper/: ImageWrapper.cpp  ImageWrapper.hpp
BMP to File/src/Main/: main.cpp
BMP-File/: makefile
BMP-File/include/: test.hpp
BMP-File/src/: main.cpp  test.cpp
CMake_config/: ConfigSFML.cmake
File to BMP/src/: CMakeLists.txt
File to BMP/src/Class2/: class2.cpp  class2.hpp
File to BMP/src/FileWrapper/: FileWrapper.cpp  FileWrapper.hpp
File to BMP/src/Main/: main.cpp
File-BMP/include/: test.h
SharedCode/ArithmeticCoding/: ArithmeticCoding.cpp  ArithmeticCoding.hpp
SharedCode/BinaryFile/: BinaryFile.cpp  BinaryFile.hpp
SharedCode/Block/: Block.cpp  Block.hpp
SharedCode/ByteRun/: ByteRun.cpp  ByteRun.hpp
